# fullstack-test-python

./: .gitignore  APPROACH.md  README.md  main.py  pyproject.toml  test_main.py
docs/plans/transaction-analysis/: ticket-1.md  ticket-10.md  ticket-11.md  ticket-12.md  ticket-13.md  ticket-14.md  ticket-2.md  ticket-3.md  ticket-4.md  ticket-5.md  ticket-6.md  ticket-7.md  ticket-8.md  ticket-9.md  transaction-analysis_plan.md  transaction-analysis_plan_review.md  transaction-analysis_research.md
