[tool.poetry]
name = "fullstack-test-python"
version = "0.1.0"
description = "Konfir Python interview test"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
